# mcp-langfuse

./: .gitignore  .pre-commit-config.yaml  README.md  TOOLS.md  pyproject.toml
.github/workflows/: ci.yml
docs/implemented/: 2026-06-plan-adversarial-review-remediation.md
src/mcp_langfuse/: __init__.py  __main__.py  client.py  config.py  openapi.py  server.py  service.py  tool_selection.py  tools_markdown.py
src/mcp_langfuse/specs/: __init__.py  langfuse-openapi.yml
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_openapi.py  test_server.py  test_service.py  test_tool_selection.py  test_tools_markdown.py
tests/smoke/: __init__.py  test_adversarial_review_remediation.py
